test/typeerrors/ex3.act
def f(x,y):
    return x+y

actor main(env):
    print("a".center(100))
    
